@@ -1159,7 +1159,9 @@ class IndexedRedisQuery(IndexedRedisHelper):
 			delete - Deletes all entries matching the filter criteria
 
 		'''
-		return self.mdl.deleter.deleteMultiple(self.allOnlyIndexedFields())
+		if self.filters or self.notFilters:
+			return self.mdl.deleter.deleteMultiple(self.allOnlyIndexedFields())
+		return self.mdl.deleter.destroyModel()
 
 	def get(self, pk):
 		'''
@@ -1553,6 +1555,29 @@ class IndexedRedisDelete(IndexedRedisHelper):
 
 		objs = self.mdl.objects.getMultipleOnlyIndexedFields(pks)
 		return self.deleteMultiple(objs)
+
+	def destroyModel(self):
+		'''
+			destroyModel - Destroy everything related to this model in one swoop.
+
+			    Same effect as Model.reset([]) - Except slightly more efficient.
+
+			    This function is called if you do Model.objects.delete() with no filters set.
+
+			@return - Number of keys deleted. Note, this is NOT number of models deleted, but total keys.
+		'''
+		conn = self._get_connection()
+		pipeline = conn.pipeline()
+		pipeline.eval("""
+		local matchingKeys = redis.call('KEYS', '%s*')
+
+		for _,key in ipairs(matchingKeys) do
+			redis.call('DEL', key)
+		end
+
+		return #matchingKeys
+		""" %( ''.join([INDEXED_REDIS_PREFIX, self.mdl.KEY_NAME, ':']), ), 0)
+		return pipeline.execute()[0]
 		
 	
 
